# stoa-context

./: .gitleaks.toml  README.md  STANDARD.md  pyproject.toml
schema/: context.schema.json
templates/: CLAUDE-context-rule.md
templates/context/: API.md  ARCHITECTURE.md  DECISIONS.md  GOTCHAS.md  manifest.yaml
templates/context/admin/: INTERNAL.md  OPS.md
templates/workflows/: context-check.yml
tests/: test_build_catalog.py  test_crawl_and_sync.py  test_gitleaks_config.py  test_scaffold_context.py  test_sync_context.py  test_validate_context.py
tests/fixtures/bad_manifest/context/: manifest.yaml
tests/fixtures/good_context/context/: manifest.yaml
tests/fixtures/good_context/context/admin/: OPS.md
tests/fixtures/store_sample/projects/example-service/context/: manifest.yaml
tests/fixtures/store_sample/projects/other-app/context/: manifest.yaml
tools/: build_catalog.py  crawl_and_sync.py  scaffold_context.py  sync_context.py  validate_context.py
